package com.example.geteventease

import android.os.Bundle
import androidx.activity.ComponentActivity
import androidx.activity.compose.setContent
import androidx.activity.enableEdgeToEdge
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.ui.Modifier
import com.example.geteventease.navigation.GETEventEaseNavHost
import com.example.geteventease.ui.theme.GETEventEaseTheme

class MainActivity : ComponentActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        enableEdgeToEdge()
        setContent {
            GETEventEaseTheme {
                GETEventEaseNavHost(modifier = Modifier.fillMaxSize())
            }
        }
    }
}
