package com.example.geteventease.data.model

enum class EventStatus {
    DRAFT,
    PUBLISHED
}
